# ci_group

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: publish.yml  test.yml
src/: lib.rs
tests/: integration.rs
tests/bins/: basic.rs  no_newline.rs  panic.rs
